# libdrachen

./: .gitignore  README  SPECIFICATION  configure.ac
man/: drachencode.1
src/: Makefile.am  common.h  decoder.c  drachen.c  drachen.h  drachencode.c  encoder.c  run_tests  unlockio.h
tests.input/ascending/: 01  04
tests.input/binary/: 01  03
tests.input/flatincr/: 01
tests.input/fullreplace/: 02  09
tests.input/halfcode/: 00
tests.input/nochange/: 03
tests.input/random/: 00  01  02  03  04  05  06  07  08  09
tests.input/rle26/: 00
tests.input/rle48/: 00
