AC_PREREQ([2.50])
AC_INIT([libdrachen], [0.0.1], [jasonlingle@yahoo.com])
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])
LT_PREREQ([1.5])
LT_INIT([dlopen])
AC_CONFIG_SRCDIR([src/drachen.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AM_MAINTAINER_MODE

AC_PROG_CC

AC_CHECK_HEADERS([inttypes.h stdlib.h])

AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

AC_OUTPUT
